h1. Wilderness CMS Change Log

h2. December 19, 2009

* Added versioning to Page and Article - along with ability to revert to previous version through Wilderness generated admin show pages

h2. December 18, 2009

* CSS submit button styling

h2. December 14, 2009

* Change tag to_param to tag name - no ID
* Admin search needs to use index omit fields as well (all table view pages) 
* Make admin show table have borders and right align the TH column, reduce top bottom padding
* Added uniqueness validation to url slug on page and article. Allow nil and blank

h2. December 9, 2009

* Switched from attachment_fu to Paperclip
* Added configuration for Admin panel menu, example:
	Wilderness::ADMIN_MENU = ['Dashboard','Content','Layout','Users','Preferences'] 
* Added configuration for admin index pages, example:
	Asset.omit_fields = ['parent_id','thumbnail','assetable_type','assetable_id','category_id']
* Admin pagination CSS bug fix
* Admin index page: change truncate from 20 to 100 chars
* Fixed view bug in Admin Dashboard with camelized model names eg RadioShow
* Added classes to th and td in index view based on downcase underscored field names to allow for CSS text-alignments eg left alignment of title, centering of "published", etc.