@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="../../utils/validate.js"></script>
 	<script type="text/javascript" src="../../utils/editable_selects.js"></script>
 	<script type="text/javascript" src="js/image.js"></script>
-	<script language="javascript" type="text/javascript" src="/javascripts/prototype.js"></script>
+	<script language="javascript" type="text/javascript" src="/javascripts/jquery-1.3.2.min.js"></script>
 	<link href="css/wilderness_advimage.css" rel="stylesheet" type="text/css" />
 	<link href="/stylesheets/wilderness/pagination.css" rel="stylesheet" type="text/css" />
 </head>
@@ -35,8 +35,7 @@
 			    <fieldset>
 			     <legend>Available Images</legend>
 			     <script type="text/javascript">//<![CDATA[
-			        new Ajax.Request("/admin/assets/gallery/",
-			          {asynchronous:true, evalScripts:true, method:'get'});     //]]>
+						jQuery.ajax({type: 'GET',dataType: 'script',url:"/admin/assets/gallery/"});     //]]>
 			     </script>
 			     <div id='dynamic_images_list'>
 			        Loading Images...<br />
